[package]
name = "diceroller"
version = "0.1.0"
authors = ["Nicolas Frankel <nicolas@frankel.ch>"]
edition = "2021"
publish = false

# dependencies:
# https://crates.io/crates/paste
# https://crates.io/crates/rand

[dependencies]
paste = "1.0.15"
rand = "0.9.1" 

[[bin]]
name = "main"
path = "src/main.rs"
